Fix gap

--- a/backend/src/main/resources/static/css/global.css
+++ b/backend/src/main/resources/static/css/global.css
@@ -1,6 +1,7 @@
 :root {
     --background-color: #121212;
     --primary-color: #3f51b5;
+    --gap: 8px;
 }
 
 body {
@@ -23,6 +24,12 @@ header {
     padding-right: 24px;
     margin-bottom: 8px;
     min-height: 64px;
+
+    gap: calc(var(--gap) * 2);
+
+    > .h-stack {
+        gap: calc(var(--gap) * 2);
+    }
 
     a {
         color: white;
@@ -59,14 +66,14 @@ button {
 .h-stack {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: var(--gap);
     align-items: center;
 }
 
 .v-stack {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: var(--gap);
 }
 
 .paper {
